--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 body {
     font-family: 'Josefin Sans', sans-serif;
     color: #7F8C8D;
-    font-size: 16px;
+    font-size: 30px;
 }
 
 .full-width {
@@ -76,6 +76,11 @@ nav ul li a {
 #work h2 {
     color: #E74C3C;
     font-size: 50px;
+}
+
+#work span {
+    font-size: 40px;
+    font-family: 'Lobster', cursive;
 }
 
 /*****HOBBIES*****/
