--- a/main.css
+++ b/main.css
@@ -123,6 +123,11 @@ footer a {
     text-decoration: none;
 }
 
+footer span {
+    font-family: 'Pacifico', cursive;
+    font-size: 50px;
+}
+
 /*****TABLET MEDIA SCREEN****/
 
 @media screen and (min-width: 760px) {
