--- a/main.css
+++ b/main.css
@@ -111,7 +111,7 @@ nav ul li a {
     text-decoration: none;
 }
 
-#contact span {
+.linkedin {
     font-size: 30px;
     font-family: 'Anton', sans-serif;
     color: #0072b1;
