--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@ header h1 {
     font-size: 90px;
     padding-top: 40px;
     margin-left: 30px;
-
+    margin-right: 30px;
     color: #F7DC6F;
 }
 
@@ -38,7 +38,7 @@ header h2 {
 
 nav {
     width: 90%;
-    padding: 20px 10px 10px 30px;
+    padding: 20px 10px 10px 50px;
 }
 
 nav ul {
