--- a/main.css
+++ b/main.css
@@ -68,21 +68,6 @@ img {
     font-size: 70px;
 }
 
-/*****WORK*****/
-#work {
-    text-align:center;
-    padding: 40px 70px;
-}
-
-#work h2 {
-    color: #E74C3C;
-    font-size: 50px;
-}
-
-#work span {
-    font-size: 40px;
-    font-family: 'Lobster', cursive;
-}
 
 /*****HOBBIES*****/
 #hobbies {
@@ -210,10 +195,36 @@ footer span {
     font-size:
 }
 
-
-
-
 /*****WORK PAGE*****/
+#hr {
+    text-align:center;
+    padding: 40px 70px;
+}
+
+#hr h2 {
+    color: #E74C3C;
+    font-size: 50px;
+}
+
+#pos span {
+    font-size: 30px;
+    font-family: 'Lobster', cursive;
+}
+
+#pos {
+    text-align:center;
+    padding: 40px 70px;
+}
+
+#contact {
+    text-align:center;
+    padding: 40px 70px;
+}
+
+
+
+
+
 
 
 
