--- a/main.css
+++ b/main.css
@@ -165,6 +165,7 @@ footer span {
 
 header .font {
     font-family: 'Lobster', cursive;
+    font-size: 40;
 }
 
 #hr h2,
@@ -183,7 +184,7 @@ header .font {
 }
 
 #pos span {
-    font-size: 30px;
+    font-size: 50px;
     font-family: 'Lobster', cursive;
 }
 
