--- a/main.css
+++ b/main.css
@@ -66,11 +66,6 @@ img {
     max-width: 100%;
 }
 
-#main-html h2 {
-    font-family: 'Pacifico', cursive;
-    text-align: center;
-    font-size: 50px;
-}
 #main-html h3 {
     text-align: center;
     padding:0 50px;
@@ -291,5 +286,12 @@ header .font {
         line-height: 150%;
     }
 
+    header h1 {
+        text-align: center;
+        font-size: 110px;
+        margin-left: 50px;
+        margin-right: 50px;
+        
+    }
 
 }
