--- a/main.css
+++ b/main.css
@@ -15,14 +15,13 @@ body {
 /*****HEADER*****/
 
 header {
-    height: 800px;
     height: 100%;
     text-align: center;
 }
 
 header h1 {
     text-align: center;
-    font-size: 120px;
+    font-size: 120px;   
     margin-left: 50px;
     margin-right: 50px;
     color: #F7DC6F;
@@ -38,7 +37,7 @@ header h2 {
 
 nav {
     width: 90%;
-    padding: 20px 10px 10px 50px;
+    padding: 70px 10px 0 50px;
 }
 
 nav ul {
@@ -47,7 +46,6 @@ nav ul {
     flex-wrap: wrap;
     justify-content: space-around;
     list-style-type: none;
-    padding: 20px 30px;
 }
 
 nav ul li a {
@@ -103,14 +101,6 @@ footer span {
     overflow: auto;
 }
 
-.about h1 {
-    text-align: center;
-    font-size: 90px;
-    padding-top: 40px;
-    margin-left: 30px;
-    margin-right: 30px;
-    color: #F7DC6F;
-}
 
 #early-life {
     background-color: #FCF3CF;
@@ -288,6 +278,6 @@ header .font {
 
     header h1 {
         font-size: 110px;
+     
     }
-
 }
