--- a/main.css
+++ b/main.css
@@ -13,6 +13,7 @@ body {
 }
 
 /*****HEADER*****/
+
 header {
     height: 800px;
     height: 100%;
@@ -37,7 +38,7 @@ header h2 {
 
 nav {
     width: 90%;
-    padding: 20px 10px 10px 50px;
+    padding: 20px 10px 0 50px;
 }
 
 nav ul {
@@ -76,6 +77,7 @@ img {
 }
 
 /*****FOOTER*****/
+
 footer {
     padding-bottom:10px;
     color: #EDAFC9;
@@ -89,20 +91,9 @@ footer a {
 
 footer span {
     font-family: 'Pacifico', cursive;
-    font-size: 30px;
 }
 
 /*****ABOUT PAGE******/
-.about body {
-    color: #7F8C8D;
-    font-size: 30px;
-}
-
-.about .full-width {
-    width: 100%;
-    margin: 0 auto;
-    overflow: auto;
-}
 
 .about h1 {
     text-align: center;
@@ -115,7 +106,7 @@ footer span {
 
 #early-life {
     background-color: #FCF3CF;
-    text-align:center;
+    text-align: center;
     padding: 50px 70px;
 }
 
@@ -129,15 +120,15 @@ footer span {
     padding-bottom: 20px;
 }
 
+#stanford {
+    text-align:center;
+    padding: 50px 70px;
+}
+
 #stanford h3 {
     color: #E74C3C; 
     font-size: 45px;
     text-align: center;
-}
-
-#stanford {
-    text-align:center;
-    padding: 50px 70px;
 }
 
 #stanford a {
@@ -147,14 +138,15 @@ footer span {
 
 #life-pinterest {
     background-color: #FCF3CF;
-    text-align:center;
+    text-align: center;
     padding: 50px 70px;
 }
 
 /*****WORK PAGE*****/
+
 #hr {
     background-color: #FCF3CF;
-    text-align:center;
+    text-align: center;
     padding: 40px 70px;
 }
 
@@ -173,7 +165,7 @@ header .font {
 }
 
 #pos {
-    text-align:center;
+    text-align: center;
     padding: 40px 70px;
 }
 
@@ -211,11 +203,6 @@ header .font {
     color: #0072b1;
 }
 
-#contact .half-width {
-    width: 600px;
-    float: left;
-}
-
 #contact .adorable {
     font-family: 'Lobster', cursive;
 }
@@ -225,10 +212,6 @@ header .font {
 }
 
 /*****HOBBIES*****/
-.puzzle-header {
-    background-size: cover;
-    background-position: center;
-}
 
 #puzzles {
     text-align: center;
@@ -248,7 +231,6 @@ header .font {
 #cookies {
     text-align:center;
     padding: 40px 70px;
-    background: url('../img/Cookies-in-box.png');
 }
 
 #cookies .galletas {
@@ -283,6 +265,4 @@ header .font {
     #puzzles p  {
         line-height: 150%;
     }
-
-
 }
