--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 body {
     font-family: 'Josefin Sans', sans-serif;
     color: #7F8C8D;
-    font-size: 30px;
+    font-size: 50px;
 }
 
 .full-width {
@@ -22,7 +22,7 @@ header {
 
 header h1 {
     text-align: center;
-    font-size: 90px;
+    font-size: 120px;
     margin-left: 50px;
     margin-right: 50px;
     color: #F7DC6F;
@@ -30,7 +30,7 @@ header h1 {
 
 header h2 {
     text-align: center;
-    font-size: 40px;
+    font-size: 50px;
     color: #E74C3C;
     margin-left: 70px;
     margin-right: 70px;
@@ -42,7 +42,7 @@ nav {
 }
 
 nav ul {
-    font-size: 30px;
+    font-size: 40px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -66,14 +66,10 @@ img {
     max-width: 100%;
 }
 
-#main-html h2 {
-    font-family: 'Pacifico', cursive;
-    text-align: center;
-    font-size: 70px;
-}
 #main-html h3 {
     text-align: center;
     padding:0 50px;
+    font-size: 60px;
 }
 
 /*****FOOTER*****/
@@ -91,20 +87,13 @@ footer a {
 
 footer span {
     font-family: 'Pacifico', cursive;
+    font-size: 25px;
 }
 
 /*****ABOUT PAGE******/
 
-.about h1 {
-    text-align: center;
-    font-size: 90px;
-    padding-top: 40px;
-    margin-left: 30px;
-    margin-right: 30px;
-    color: #F7DC6F;
-}
-
-#early-life {
+#early-life,
+#life-pinterest {
     background-color: #FCF3CF;
     text-align: center;
     padding: 50px 70px;
@@ -127,7 +116,7 @@ footer span {
 
 #stanford h3 {
     color: #E74C3C; 
-    font-size: 45px;
+    font-size: 55px;
     text-align: center;
 }
 
@@ -136,15 +125,10 @@ footer span {
     color:#E74C3C;
 }
 
-#life-pinterest {
-    background-color: #FCF3CF;
-    text-align: center;
-    padding: 50px 70px;
-}
-
 /*****WORK PAGE*****/
 
-#hr {
+#hr,
+#contact {
     background-color: #FCF3CF;
     text-align: center;
     padding: 40px 70px;
@@ -169,28 +153,14 @@ header .font {
     padding: 40px 70px;
 }
 
-#pos span {
-    font-size: 30px;
+#pos span,
+#contact span {
+    font-size:50px;
     font-family: 'Lobster', cursive;
-}
-
-#pos .pinterest-font {
-    font-family: 'Lobster', cursive;
-}
-
-#contact {
-    background-color: #FCF3CF;
-    text-align:center;
-    padding: 40px 70px;
 }
 
 #contact img {
     text-align: center;
-}
-
-#contact span {
-    font-size: 40px;
-    font-family: 'Lobster', cursive;
 }
 
 #contact .isaura {
@@ -264,5 +234,9 @@ header .font {
     #cookies p,
     #puzzles p  {
         line-height: 150%;
+    }
+
+    header h1 {
+        font-size: 110px;
     }
 }
