--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,27 @@ body {
 
 /*****HEADER*****/
 
+/**BACK TO TOP BUTTON**/
+#myBtn {
+    display: none; 
+    position: fixed;
+    bottom: 20px; 
+    right: 30px; 
+    z-index: 99; 
+    border: none; 
+    outline: none; 
+    background-color: plum; 
+    color: white; 
+    cursor: pointer; 
+    padding: 17px; 
+    border-radius: 90%;
+    font-size: 18px; 
+}
+  
+#myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+}
+
 header {
     height: 800px;
     height: 100%;
