--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,28 @@ body {
     overflow: auto;
 }
 
+/*****BUTTON HEADER*****/
+
+#myBtn {
+    display: none; 
+    position: fixed;
+    bottom: 20px; 
+    right: 30px; 
+    z-index: 99; 
+    border: none; 
+    outline: none; 
+    background-color: #F7DC6F; 
+    color: white; 
+    cursor: pointer; 
+    padding: 17px; 
+    border-radius: 90%;
+    font-size: 18px; 
+}
+  
+#myBtn:hover {
+    background-color: #E74C3C;
+}
+
 /*****HEADER*****/
 
 header {
@@ -100,8 +122,7 @@ footer span {
 }
 
 #early-life h2,
-#stanford h2,
-#life-pinterest h2 {
+#stanford h2 {
     color: #E74C3C; 
     font-size: 70px;
     border-bottom: black solid;
@@ -183,14 +204,16 @@ header .font {
 
 /*****HOBBIES*****/
 
-#puzzles {
+#puzzles,
+#scones {
     text-align: center;
     padding: 40px 70px;
     background-color: #FCF3CF;
 }
 
 #puzzles h2,
-#cookies h2 {
+#cookies h2,
+#scones h2 {
     color: #E74C3C;
     font-size: 70px;
     border-bottom: black solid;
