--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ nav ul li a {
 
 header h1 {
     text-align: center;
-    font-size: 80px;
+    font-size: 90px !important;
     margin-left: 50px;
     margin-right: 50px;
     color: #F7DC6F;
@@ -77,13 +77,15 @@ header h1 {
 
 header h2 {
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     color: #E74C3C;
-    margin-left: 70px;
-    margin-right: 70px;
+    margin: 0 15%;
+    width: 70%;
+    line-height: 140%;
 }
 
-/*****MAIN SECTION*****/
+/*****MAIN SECTION***margin-left: 70px;
+    margin-right: 70px; **/
 
 #main-html {
     text-align: center;
