--- a/css/main.css
+++ b/css/main.css
@@ -284,9 +284,8 @@ header .font {
     
     
     #stanford h3 {
-        color: #E74C3C; 
-        font-size: 55px;
-        text-align: center;
+        font-size: 90%;
+       
     }
     
     #stanford a {
