--- a/css/main.css
+++ b/css/main.css
@@ -324,17 +324,47 @@ header .font {
     }
 
     header h1 {
-        font-size: 120%;
+        font-size: 160%;
     }
 
     header h2 {
-        font-size: 50%;
+        font-size: 70%;
         width: 70%;
         padding-left: 10%;
     }
-}
+
+    /*MAIN*/
+    #main-html h3 {
+        font-size: 40px;
+    }
+
+    /*ABOUT*/
+    #early-life h2,
+    #stanford h2 {
+        font-size: 100%;
+    }
+    
+    #stanford h3 {
+        font-size: 85%;
+    }
+    
+    /*WORK*/
+    #hr h2, #pos h2, #contact h2 {
+        font-size: 100%;
+    }
+
+    #pos span,
+    #contact span {
+        font-size: 100%;
+    }
+
+    /*HOBBIES*/
+    #puzzles h2, 
+    #cookies h2, 
+    #scones h2 {
+        font-size: 100%;
+    }
 
 
-header h3 {
-    font-size: 60%;
+
 }
